MacViews: Share logic with Cocoa bubbles for dismissing on clicks.

MacOS suppresses window activation events when clicking rapidly, so to
get menu-like behavior on popups we need to monitor clicks explicitly.
Currently, clicking rapidly on browser buttons that summon MacViews
popups does not give the expected behavior.

Share the logic from base_bubble_controller.mm that does this, and use
it in views::BubbleDialogDelegate.

Bug: 789377
Change-Id: I6f38fe70032ffdff6707651f322500de612d002e
Reviewed-on: https://chromium-review.googlesource.com/795611
Commit-Queue: Trent Apted <tapted@chromium.org>
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#520367}