ui/base/test/menu_test_observer.h
@@ -2,8 +2,8 @@
 // Use of this source code is governed by a BSD-style license that can be
 // found in the LICENSE file.
 
-#ifndef CHROME_BROWSER_UI_COCOA_TEST_MENU_TEST_OBSERVER_H_
-#define CHROME_BROWSER_UI_COCOA_TEST_MENU_TEST_OBSERVER_H_
+#ifndef UI_BASE_TEST_MENU_TEST_OBSERVER_H_
+#define UI_BASE_TEST_MENU_TEST_OBSERVER_H_
 
 #import <Cocoa/Cocoa.h>
 
@@ -35,4 +35,4 @@ using MenuTestObserverOpenCallback = void (^)(MenuTestObserver*);
 
 @end
 
-#endif  // CHROME_BROWSER_UI_COCOA_TEST_MENU_TEST_OBSERVER_H_
+#endif  // UI_BASE_TEST_MENU_TEST_OBSERVER_H_
